ConstraintParser.py
# Generated from Constraint.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ConstraintParser ( Parser ):

    grammarFileName = "Constraint.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'P('", "'|'", "')'", "'='", "'<'", "'>'", 
                     "'<='", "'>='", "'('", "'w('", "','", "'A('", "'call('", 
                     "'+'", "'-'", "'*'", "'/'", "'r('", "'api_result'", 
                     "'len('", "'status('", "'f('", "'!='", "'['", "']'", 
                     "'D'", "'null'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'XOR'", "'in'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NOT", "AND", "OR", "XOR", "IN", "TRUE", "FALSE", 
                      "IDENTIFIER", "NUMBER", "STRING", "WS" ]

    RULE_constraint = 0
    RULE_prob_constraint = 1
    RULE_probability_expr = 2
    RULE_logic_expr = 3
    RULE_logic_xor = 4
    RULE_logic_term = 5
    RULE_logic_factor = 6
    RULE_atom = 7
    RULE_write_event = 8
    RULE_user_action = 9
    RULE_system_event = 10
    RULE_guard = 11
    RULE_expr = 12
    RULE_term = 13
    RULE_factor = 14
    RULE_atom_expr = 15
    RULE_ui_element = 16
    RULE_api = 17
    RULE_comparator = 18
    RULE_range = 19
    RULE_literal = 20
    RULE_literal_bool = 21

    ruleNames =  [ "constraint", "prob_constraint", "probability_expr", 
                   "logic_expr", "logic_xor", "logic_term", "logic_factor", 
                   "atom", "write_event", "user_action", "system_event", 
                   "guard", "expr", "term", "factor", "atom_expr", "ui_element", 
                   "api", "comparator", "range", "literal", "literal_bool" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    NOT=28
    AND=29
    OR=30
    XOR=31
    IN=32
    TRUE=33
    FALSE=34
    IDENTIFIER=35
    NUMBER=36
    STRING=37
    WS=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ConstraintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prob_constraint(self):
            return self.getTypedRuleContext(ConstraintParser.Prob_constraintContext,0)


        def EOF(self):
            return self.getToken(ConstraintParser.EOF, 0)

        def getRuleIndex(self):
            return ConstraintParser.RULE_constraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstraint" ):
                listener.enterConstraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstraint" ):
                listener.exitConstraint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstraint" ):
                return visitor.visitConstraint(self)
            else:
                return visitor.visitChildren(self)




    def constraint(self):

        localctx = ConstraintParser.ConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_constraint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.prob_constraint()
            self.state = 45
            self.match(ConstraintParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Prob_constraintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logic_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConstraintParser.Logic_exprContext)
            else:
                return self.getTypedRuleContext(ConstraintParser.Logic_exprContext,i)


        def probability_expr(self):
            return self.getTypedRuleContext(ConstraintParser.Probability_exprContext,0)


        def getRuleIndex(self):
            return ConstraintParser.RULE_prob_constraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProb_constraint" ):
                listener.enterProb_constraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProb_constraint" ):
                listener.exitProb_constraint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProb_constraint" ):
                return visitor.visitProb_constraint(self)
            else:
                return visitor.visitChildren(self)




    def prob_constraint(self):

        localctx = ConstraintParser.Prob_constraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prob_constraint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(ConstraintParser.T__0)
            self.state = 48
            self.logic_expr(0)
            self.state = 49
            self.match(ConstraintParser.T__1)
            self.state = 50
            self.logic_expr(0)
            self.state = 51
            self.match(ConstraintParser.T__2)
            self.state = 52
            self.probability_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Probability_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ConstraintParser.NUMBER, 0)

        def getRuleIndex(self):
            return ConstraintParser.RULE_probability_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProbability_expr" ):
                listener.enterProbability_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProbability_expr" ):
                listener.exitProbability_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProbability_expr" ):
                return visitor.visitProbability_expr(self)
            else:
                return visitor.visitChildren(self)




    def probability_expr(self):

        localctx = ConstraintParser.Probability_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_probability_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 496) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 55
            self.match(ConstraintParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logic_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logic_xor(self):
            return self.getTypedRuleContext(ConstraintParser.Logic_xorContext,0)


        def logic_expr(self):
            return self.getTypedRuleContext(ConstraintParser.Logic_exprContext,0)


        def OR(self):
            return self.getToken(ConstraintParser.OR, 0)

        def getRuleIndex(self):
            return ConstraintParser.RULE_logic_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic_expr" ):
                listener.enterLogic_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic_expr" ):
                listener.exitLogic_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogic_expr" ):
                return visitor.visitLogic_expr(self)
            else:
                return visitor.visitChildren(self)



    def logic_expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ConstraintParser.Logic_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_logic_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.logic_xor(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 65
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ConstraintParser.Logic_exprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_logic_expr)
                    self.state = 60
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 61
                    self.match(ConstraintParser.OR)
                    self.state = 62
                    self.logic_xor(0) 
                self.state = 67
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Logic_xorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logic_term(self):
            return self.getTypedRuleContext(ConstraintParser.Logic_termContext,0)


        def logic_xor(self):
            return self.getTypedRuleContext(ConstraintParser.Logic_xorContext,0)


        def XOR(self):
            return self.getToken(ConstraintParser.XOR, 0)

        def getRuleIndex(self):
            return ConstraintParser.RULE_logic_xor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic_xor" ):
                listener.enterLogic_xor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic_xor" ):
                listener.exitLogic_xor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogic_xor" ):
                return visitor.visitLogic_xor(self)
            else:
                return visitor.visitChildren(self)



    def logic_xor(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ConstraintParser.Logic_xorContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_logic_xor, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.logic_term(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 76
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ConstraintParser.Logic_xorContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_logic_xor)
                    self.state = 71
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 72
                    self.match(ConstraintParser.XOR)
                    self.state = 73
                    self.logic_term(0) 
                self.state = 78
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Logic_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logic_factor(self):
            return self.getTypedRuleContext(ConstraintParser.Logic_factorContext,0)


        def logic_term(self):
            return self.getTypedRuleContext(ConstraintParser.Logic_termContext,0)


        def AND(self):
            return self.getToken(ConstraintParser.AND, 0)

        def getRuleIndex(self):
            return ConstraintParser.RULE_logic_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic_term" ):
                listener.enterLogic_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic_term" ):
                listener.exitLogic_term(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogic_term" ):
                return visitor.visitLogic_term(self)
            else:
                return visitor.visitChildren(self)



    def logic_term(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ConstraintParser.Logic_termContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_logic_term, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.logic_factor()
            self._ctx.stop = self._input.LT(-1)
            self.state = 87
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ConstraintParser.Logic_termContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_logic_term)
                    self.state = 82
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 83
                    self.match(ConstraintParser.AND)
                    self.state = 84
                    self.logic_factor() 
                self.state = 89
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Logic_factorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(ConstraintParser.NOT, 0)

        def logic_factor(self):
            return self.getTypedRuleContext(ConstraintParser.Logic_factorContext,0)


        def logic_expr(self):
            return self.getTypedRuleContext(ConstraintParser.Logic_exprContext,0)


        def atom(self):
            return self.getTypedRuleContext(ConstraintParser.AtomContext,0)


        def getRuleIndex(self):
            return ConstraintParser.RULE_logic_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic_factor" ):
                listener.enterLogic_factor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic_factor" ):
                listener.exitLogic_factor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogic_factor" ):
                return visitor.visitLogic_factor(self)
            else:
                return visitor.visitChildren(self)




    def logic_factor(self):

        localctx = ConstraintParser.Logic_factorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_logic_factor)
        try:
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.match(ConstraintParser.NOT)
                self.state = 91
                self.logic_factor()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.match(ConstraintParser.T__8)
                self.state = 93
                self.logic_expr(0)
                self.state = 94
                self.match(ConstraintParser.T__2)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 96
                self.atom()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def write_event(self):
            return self.getTypedRuleContext(ConstraintParser.Write_eventContext,0)


        def user_action(self):
            return self.getTypedRuleContext(ConstraintParser.User_actionContext,0)


        def system_event(self):
            return self.getTypedRuleContext(ConstraintParser.System_eventContext,0)


        def guard(self):
            return self.getTypedRuleContext(ConstraintParser.GuardContext,0)


        def literal_bool(self):
            return self.getTypedRuleContext(ConstraintParser.Literal_boolContext,0)


        def getRuleIndex(self):
            return ConstraintParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = ConstraintParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_atom)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.write_event()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.user_action()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 101
                self.system_event()
                pass
            elif token in [9, 18, 20, 21, 22, 27, 36, 37]:
                self.enterOuterAlt(localctx, 4)
                self.state = 102
                self.guard()
                pass
            elif token in [33, 34]:
                self.enterOuterAlt(localctx, 5)
                self.state = 103
                self.literal_bool()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Write_eventContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ui_element(self):
            return self.getTypedRuleContext(ConstraintParser.Ui_elementContext,0)


        def expr(self):
            return self.getTypedRuleContext(ConstraintParser.ExprContext,0)


        def getRuleIndex(self):
            return ConstraintParser.RULE_write_event

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWrite_event" ):
                listener.enterWrite_event(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWrite_event" ):
                listener.exitWrite_event(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite_event" ):
                return visitor.visitWrite_event(self)
            else:
                return visitor.visitChildren(self)




    def write_event(self):

        localctx = ConstraintParser.Write_eventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_write_event)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(ConstraintParser.T__9)
                self.state = 107
                self.ui_element()
                self.state = 108
                self.match(ConstraintParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.match(ConstraintParser.T__9)
                self.state = 111
                self.ui_element()
                self.state = 112
                self.match(ConstraintParser.T__10)
                self.state = 113
                self.expr(0)
                self.state = 114
                self.match(ConstraintParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class User_actionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ui_element(self):
            return self.getTypedRuleContext(ConstraintParser.Ui_elementContext,0)


        def getRuleIndex(self):
            return ConstraintParser.RULE_user_action

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUser_action" ):
                listener.enterUser_action(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUser_action" ):
                listener.exitUser_action(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUser_action" ):
                return visitor.visitUser_action(self)
            else:
                return visitor.visitChildren(self)




    def user_action(self):

        localctx = ConstraintParser.User_actionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_user_action)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(ConstraintParser.T__11)
            self.state = 119
            self.ui_element()
            self.state = 120
            self.match(ConstraintParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class System_eventContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def api(self):
            return self.getTypedRuleContext(ConstraintParser.ApiContext,0)


        def expr(self):
            return self.getTypedRuleContext(ConstraintParser.ExprContext,0)


        def getRuleIndex(self):
            return ConstraintParser.RULE_system_event

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSystem_event" ):
                listener.enterSystem_event(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSystem_event" ):
                listener.exitSystem_event(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSystem_event" ):
                return visitor.visitSystem_event(self)
            else:
                return visitor.visitChildren(self)




    def system_event(self):

        localctx = ConstraintParser.System_eventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_system_event)
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.match(ConstraintParser.T__12)
                self.state = 123
                self.api()
                self.state = 124
                self.match(ConstraintParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.match(ConstraintParser.T__12)
                self.state = 127
                self.api()
                self.state = 128
                self.match(ConstraintParser.T__10)
                self.state = 129
                self.expr(0)
                self.state = 130
                self.match(ConstraintParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GuardContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConstraintParser.ExprContext)
            else:
                return self.getTypedRuleContext(ConstraintParser.ExprContext,i)


        def comparator(self):
            return self.getTypedRuleContext(ConstraintParser.ComparatorContext,0)


        def IN(self):
            return self.getToken(ConstraintParser.IN, 0)

        def range_(self):
            return self.getTypedRuleContext(ConstraintParser.RangeContext,0)


        def getRuleIndex(self):
            return ConstraintParser.RULE_guard

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGuard" ):
                listener.enterGuard(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGuard" ):
                listener.exitGuard(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGuard" ):
                return visitor.visitGuard(self)
            else:
                return visitor.visitChildren(self)




    def guard(self):

        localctx = ConstraintParser.GuardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_guard)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.expr(0)
                self.state = 135
                self.comparator()
                self.state = 136
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.expr(0)
                self.state = 139
                self.match(ConstraintParser.IN)
                self.state = 140
                self.range_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(ConstraintParser.TermContext,0)


        def expr(self):
            return self.getTypedRuleContext(ConstraintParser.ExprContext,0)


        def getRuleIndex(self):
            return ConstraintParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ConstraintParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.term(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 152
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ConstraintParser.ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 147
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 148
                    _la = self._input.LA(1)
                    if not(_la==14 or _la==15):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 149
                    self.term(0) 
                self.state = 154
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
